# ComputerClub

./: CMakeLists.txt  README.md  main.cpp
headers/: Club.h  Event.h  Person.h  Time.h
include/: Club.cpp  Event.cpp  Person.cpp  Time.cpp
tests/: CMakeLists.txt  test.cpp
tests/googletest-release-1.12.1/: build.ninja
